@@ -136,6 +136,7 @@ void checkqf (){
   CHECK_ALL_SIGNS(T,11.,3,*);
   CHECK_ALL_SIGNS(T,11.,4,/);
   CHECK_SI(T,LONG_MIN,1,*);
+  CHECK_SI(T,0,3,*);
   CHECK_ALL_COMPARISONS(T,5.,2);
   CHECK_ALL_SIGNS_COMPARISONS(T,11.,3);
   CHECK_MPZ(T,5,-2,<); 
